fix: truncate results grid paragraph

--- a/static/grid.css
+++ b/static/grid.css
@@ -14,6 +14,12 @@
     grid-template-columns: repeat(1, 1fr);
 }
 
+.grid__results p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 @media(min-width: 576px)and (max-width: 767.98px) {
     .grid__results {
         grid-template-columns: repeat(2, 1fr)
