--- a/static/utils.css
+++ b/static/utils.css
@@ -8,7 +8,8 @@
     /*width: 250px;*/
 }
 .card-item-big {
-    width: 100%;
+    /*width: 100%;*/
+    min-width: 0;
 }
 
 .card-item-text {
